--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <img id="background" src="wiux_background.png"/><input id="input" placeholder="Name" maxlength=50></input>
     <div id="spawn">Join Game</div>
     <iframe id="discord" src="https://discord.com/widget?id=919224792408809502&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-    <div class="boring">
+    <div class="boring" id="legal">
       <a style="color: #fff;" href="/boring/pp.html">Privacy Policy</a>
       <a style="color: #fff;" href="/boring/tos.html">Terms of use</a>
     </div>
