--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </style>
   </head>
   <body>
-    <!-- <img id="background" src="wiux_background.png"/> -->
+    <img id="background" src="wiux_background.png"/>
     <input id="input" placeholder="Name" maxlength=50></input>
     <div id="spawn">Join Game</div>
     <iframe id="discord" src="https://discord.com/widget?id=919224792408809502&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
