--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <link rel="shortcut icon" href="wiux_favicon.png"/>
+    <meta charset="UTF-8">
     <meta content="wiux.io" property="og:title" />
     <meta content="open source io game" property="og:description" />
     <meta content="https://wiux-frontend.pauljohnson11.repl.co" property="og:url" />
     <meta content="wiux_favicon.png" property="og:image" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Paul Johnson">
+    <meta name="keywords" content="game, io game, wiux">
+    <meta name="description" content="Attack and dodge other players while not getting hit!">
 
     <title>wiux.io</title>
 
