--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
       }
 
       #discord {
-        left: 25%;
+        left: 5%;
         position: absolute;
         top: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(0px, -50%);
+        width: 20%;
       }
 
       .boring {
