--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         transform: translate(-50%, -50%);
         vertical-align: middle;
         width: 180px;
+        cursor: pointer;
       }
 
       #background {
