google search console verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="shortcut icon" href="wiux_favicon.png"/>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="Kx5-yVnOQwXnvLYVi4VAaJ4TxbBFmm0sS1MKg7-9daQ" />
     <meta content="wiux.io" property="og:title" />
     <meta content="open source io game" property="og:description" />
     <meta content="https://wiux-frontend.pauljohnson11.repl.co" property="og:url" />
