--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <a style="color: #fff;" href="/boring/tos.html">Terms of use</a>
     </div>
     <canvas id="canvas"></canvas>
+    <script src="wasm/shuffler.wasm.js"></script>
     <script type="module" src="script.js"></script>
   </body>
 </html>
